Remove hardcoded AWS secrets, use GitHub Secrets instead